<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="onesong">1 song</string>
    <plurals name="Nsongs">
        <item quantity="other"><xliff:g id="count">%d</xliff:g> songs</item>
    </plurals>
    <plurals name="Nsongscomp">
        <item quantity="other"><xliff:g id="count_for_artist">%2$d</xliff:g> of <xliff:g id="total_count">%1$d</xliff:g> songs</item>
    </plurals>
    <plurals name="Nalbums">
        
        <item quantity="one">1 album</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> albums</item>
    </plurals>
    <string translatable="false" name="durationformatshort"><xliff:g id="format">%2$d:%5$02d</xliff:g></string>
    <string translatable="false" name="durationformatlong"><xliff:g id="format">%1$d:%3$02d:%5$02d</xliff:g></string>
    <string name="delete_item">Delete</string>
    <string name="play_all">Play all</string>
    <string name="show_item_information">Property</string>
    <string name="delete_artist_desc">All songs by <xliff:g id="artist">%s</xliff:g> will be permanently deleted from the SD card.</string>
    <string name="delete_album_desc">The entire album \"<xliff:g id="album">%s</xliff:g>\" will be permanently deleted from the SD card.</string>
    <string name="delete_song_desc">\"<xliff:g id="song">%s</xliff:g>\" will be permanently deleted from the SD card.</string>
    <string name="delete_video_desc">\"<xliff:g id="video">%s</xliff:g>\" will be permanently deleted from the SD card.</string>
    <string name="delete_confirm_button_text">OK</string>
    <plurals name="NNNtracksdeleted">
        
        <item quantity="one">1 song was deleted.</item>
        
        <item quantity="other"><xliff:g id="songs_to_delete">%d</xliff:g> songs were deleted.</item>
    </plurals>
    <plurals name="NNNvideosdeleted">
        
        <item quantity="one">1 video was deleted.</item>
        
        <item quantity="other"><xliff:g id="video_to_delete">%d</xliff:g> videos were deleted.</item>
    </plurals>
    <string name="scanning">Scanning SD card\u2026</string>
    <string name="nowplaying_title">Now playing</string>
    <string name="artists_title">Artists</string>
    <string name="albums_menu">Albums</string>
    <string name="albums_title">Albums</string>
    <string name="tracks_menu">Songs</string>
    <string name="tracks_title">Songs</string>
    <string name="playlists_menu">Playlists</string>
    <string name="playlists_title">Playlists</string>
    <string name="videos_title">Videos</string>
    <string name="all_title">All media</string>
    <string name="browse_menu">Artists</string>
    <string name="search_title">Search</string>
    <string name="update_menu">Update</string>
    <string name="no_tracks_title">No songs</string>
    <string name="no_videos_title">No videos</string>
    <string name="no_playlists_title">No playlists</string>
    <string name="delete_playlist_menu">Delete</string>
    <string name="edit_playlist_menu">Edit</string>
    <string name="rename_playlist_menu">Rename</string>
    <string name="playlist_deleted_message">Playlist deleted.</string>
    <string name="playlist_renamed_message">Playlist renamed.</string>
    <string name="recentlyadded">Recently added</string>
    <string name="recentlyadded_title">Recently added</string>
    <string name="podcasts_listitem">Podcasts</string>
    <string name="podcasts_title">Podcasts</string>
    <string name="sdcard_missing_title">No SD card</string>
    <string name="sdcard_missing_message">Your phone does not have an SD card inserted.</string>
    <string name="sdcard_busy_title">SD card unavailable</string>
    <string name="sdcard_busy_message">Sorry, your SD card is busy.</string>
    <string name="sdcard_error_title">SD card error</string>
    <string name="sdcard_error_message">An error was encountered on your SD card.</string>
    <string name="unknown_artist_name">Unknown artist</string>
    <string name="unknown_album_name">Unknown album</string>
    <string name="shuffle_on_notif">Shuffle is on.</string>
    <string name="shuffle_off_notif">Shuffle is off.</string>
    <string name="repeat_off_notif">Repeat is off.</string>
    <string name="repeat_current_notif">Repeating current song.</string>
    <string name="repeat_all_notif">Repeating all songs.</string>
    <string name="ringtone_menu">Use as phone ringtone</string>
    <string name="ringtone_menu_short">Use as ringtone</string>
    <string name="ringtone_set">\"<xliff:g id="name" example="Alarm Bell">%s</xliff:g>\" set as phone ringtone.</string>
    <string name="play_selection">Play</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="queue">Current playlist</string>
    <string name="new_playlist">New</string>
    <string name="new_playlist_name_template">New playlist <xliff:g id="number">%d</xliff:g></string>
    <plurals name="NNNtrackstoplaylist">
        
        <item quantity="one">1 song added to playlist.</item>
        
        <item quantity="other"><xliff:g id="number" example="27">%d</xliff:g> songs added to playlist.</item>
    </plurals>
    <string name="emptyplaylist">Selected playlist is empty.</string>
    <string name="create_playlist_create_text">Save</string>
    <string name="create_playlist_overwrite_text">Overwrite</string>
    <string name="service_start_error_title">Playback problem</string>
    <string name="service_start_error_msg">Sorry, the song could not be played.</string>
    <string name="service_start_error_button">OK</string>
    <string name="save_as_playlist">Save as playlist</string>
    <string name="clear_playlist">Clear playlist</string>
    <string name="musicbrowserlabel">Music</string>
    <string name="musicshortcutlabel">Music playlist</string>
    <string name="mediaplaybacklabel">Music</string>
    <string name="videobrowserlabel">Videos</string>
    <string name="mediapickerlabel">Music</string>
    <string name="playback_failed">Sorry, the player does not support this type of audio file.</string>
    <string name="cancel">Cancel</string>
    <string name="remove_from_playlist">Remove from playlist</string>
    <string name="streamloadingtext">Connecting to <xliff:g id="host">%s</xliff:g></string>
    <string name="mediasearch">Search for <xliff:g id="term" example="Beethoven">%s</xliff:g> using:</string>
    <string name="working_artists">Artists\u2026</string>
    <string name="working_albums">Albums\u2026</string>
    <string name="working_songs">Songs\u2026</string>
    <string name="working_playlists">Playlists\u2026</string>
    <string name="loading">Loading</string>
    <string name="sort_by_track">Tracks</string>
    <string name="sort_by_album">Albums</string>
    <string name="sort_by_artist">Artists</string>
    <string name="music_picker_title">Select music track</string>
    <string name="gadget_track">Track <xliff:g id="track_number">%d</xliff:g></string>
    <string name="fail_to_start_stream">Failed to play the requested stream.</string>
    <string name="search_settings_description">Artists, albums, and tracks</string>
    <string name="search_hint">Search Music</string>
    <string name="fast_scroll_alphabet">\u0020ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="widget_initial_text">Touch to select music.</string>
    <string name="app_name">Okosama Media Player</string>
    <string name="settings">Music settings</string>
    <string name="audio_focus_category_title">Behavior</string>
    <string name="enable_focus_loss_ducking_title">Focus loss ducking</string>
    <string name="enable_focus_loss_ducking_summary">Instead of pausing playback, lower playback volume during audible notifications</string>
    <string-array name="vibrate_intensity_entries">
        <item>0.01 second</item>
        <item>0.02 second</item>
        <item>0.03 second</item>
        <item>0.05 second</item>
        <item>0.07 second</item>
        <item>0.1 second</item>
        <item>0.15 second</item>
        <item>0.2 second</item>
        <item>0.3 second</item>
        <item>0.5 second</item>
        <item>0.7 second</item>
        <item>0.9 second</item>
        <item>1.1 second</item>
    </string-array>
    <string-array name="vibrate_intensity_entryvalues" translatable="false">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>50</item>
        <item>70</item>
        <item>100</item>
        <item>150</item>
        <item>200</item>
        <item>300</item>
        <item>500</item>
        <item>700</item>
        <item>900</item>
        <item>1100</item>
   	</string-array>
    <string name="widget_category_title">Widget</string>
    <string name="widget_transparency_title">Transparency</string>
    <string name="widget_transparency_summary">Select level of translucency for the music widget background</string>
    <string-array name="widget_transparency_entries">
        <item>0%</item>
        <item>10%</item>
        <item>20%</item>
        <item>30%</item>
        <item>40%</item>
        <item>50%</item>
        <item>60%</item>
        <item>70%</item>
        <item>80%</item>
        <item>90%</item>
        <item>100%</item>
    </string-array>
    <string-array name="widget_transparency_entryvalues" translatable="false">
        <item>0</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
        <item>90</item>
        <item>100</item>
    </string-array>
    <string name="create_playlist_create_text_prompt" msgid="2379436619128383935">"Open the keyboard to give your new Playlist a name or select Save to name it \"<xliff:g id="PLAYLIST">%s</xliff:g>\"."</string>
    <string name="rename_playlist_same_prompt" msgid="7777541452078260899">"Open the keyboard to give playlist \"<xliff:g id="PLAYLIST">%s</xliff:g>\" a new name."</string>
    <string name="rename_playlist_diff_prompt" msgid="900422624897120958">"Open the keyboard to give playlist \"<xliff:g id="PLAYLIST">%1$s</xliff:g>\" a new name or select Save to name it \"<xliff:g id="NAME">%2$s</xliff:g>\"."</string>
    <string name="notification_artist_album" msgid="2128095771677061443">"<xliff:g id="ALBUM">%2$s</xliff:g>"\n"<xliff:g id="ARTIST">%1$s</xliff:g>"</string>
    <string name="albumsongseparator">, </string>
    <string name="updateing">Reading library now...</string>
    <string name="empty_data">Selected playlist is empty.</string>
    <string name="effect_menu">Effect</string>
    <string name="setting_menu">Setting</string>
    <string name="cant_play_media">Sorry, this player cannot play the specified media.</string>
    <string name="need_restart_because_sdcard_status_change">Please reboot this application because status of the SD card is changed.¥nApplication was closed forcely.</string>
    <string name="twitter_consumer_key">Zeg3AGGq1muwWgcZ9Qrw</string>
    <string name="enable_headset_plug_and_play_title">Headset plug and play</string>
    <string name="enable_headset_plug_and_play_summary">Auto play when headset connected. Auto stop when headset disconnected.</string>
    <string name="enable_media_change_vibrate_title">Vibrate when media changing</string>
    <string name="enable_media_change_vibrate_summary">Do notification by the vibration when first¥,next¥,or previous media play starting.</string>
    <string name="vibrate_intensity_title">Vibration time of the when media changing</string>
    <string name="enable_animation_title">Animation enabled</string>
    <string name="enable_animation_summary">animation that no mean and no variant enabled</string>
   	<string name="audio_animation_category_title">Animation settings</string>
    <string name="animation_level_title">Strength of the animation</string>
    <string name="animation_speed_title">animation speed</string>
</resources>