<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright 2011, The CyanogenMod Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings"
    android:key="settings">

    <PreferenceCategory android:title="@string/audio_focus_category_title">

        <CheckBoxPreference android:key="enable_media_change_vibrate"
            android:title="@string/enable_media_change_vibrate_title"
            android:summary="@string/enable_media_change_vibrate_summary"
            android:defaultValue="true" />
        <ListPreference android:key="virate_intensity"
            android:title="@string/vibrate_intensity_title"
            android:entries="@array/vibrate_intensity_entries"
            android:entryValues="@array/vibrate_intensity_entryvalues"
            android:defaultValue="100"
            android:dialogTitle="@string/vibrate_intensity_title"
            android:dependency="enable_media_change_vibrate" />
        <CheckBoxPreference android:key="enable_headset_plug_and_play"
            android:title="@string/enable_headset_plug_and_play_title"
            android:summary="@string/enable_headset_plug_and_play_summary"
            android:defaultValue="false" />
    </PreferenceCategory>
        
    <PreferenceCategory android:title="@string/audio_animation_category_title">
        <CheckBoxPreference android:key="enable_animation"
            android:title="@string/enable_animation_title"
            android:summary="@string/enable_animation_summary"
            android:defaultValue="true" />
        <ListPreference android:key="animation_level"
            android:title="@string/animation_level_title"
            android:entries="@array/animation_level_entries"
            android:entryValues="@array/animation_level_entryvalues"
            android:defaultValue="3"
            android:dialogTitle="@string/animation_level_title"
            android:dependency="enable_animation" />
        <ListPreference android:key="animation_speed"
            android:title="@string/animation_speed_title"
            android:entries="@array/animation_speed_entries"
            android:entryValues="@array/animation_speed_entryvalues"
            android:defaultValue="300"
            android:dialogTitle="@string/animation_speed_title"
            android:dependency="enable_animation" />
        

    </PreferenceCategory>

</PreferenceScreen>
